<resources>
    <string name="app_name">Oyla</string>
    <string name="hint_city">Şehir</string>
    <string name="text_city">Şehir: </string>
    <string name="text_btnVote">Oyla</string>
    <string name="hint_password">Şifre</string>
    <string name="text_btnCancel">İptal</string>
    <string name="text_btnApply">Uygula</string>
    <string name="text_gender">Cinsiyet: </string>
    <string name="text_btnRadioMale">Erkek</string>
    <string name="text_btnAccount">Hesabım</string>
    <string name="text_pollCount1">Toplam </string>
    <string name="text_btnSignIn">Giriş Yap</string>
    <string name="text_btnLogout">Çıkış Yap</string>
    <string name="text_cityAccount">Şehir: </string>
    <string name="text_category">Kategori: </string>
    <string name="text_btnRegister">Kayıt Ol</string>
    <string name="text_btnRadioFemale">Kadın</string>
    <string name="text_anonymousUser">Anonim</string>
    <string name="text_pollGenderBoth">Herkes</string>
    <string name="text_voteCount">Oy Sayıları</string>
    <string name="content_descriptionLeft">Sol</string>
    <string name="hint_passwordNew">Yeni Şifre</string>
    <string name="hint_pollTitle">Anket Sorusu</string>
    <string name="text_emailAddress">E-Posta: </string>
    <string name="content_descriptionRight">Sağ</string>
    <string name="hint_txtPasswordSignIn">Şifre</string>
    <string name="text_btnMyVotes">Oyladıklarım</string>
    <string name="text_pollGenderMale">Erkekler</string>
    <string name="content_description">Cinsiyet:</string>
    <string name="text_userName">Kullanıcı Adı: </string>
    <string name="text_birthDate">Doğum Tarihi: </string>
    <string name="text_accordingToAge">Yaşa Göre</string>
    <string name="text_pollCount2"> anket yayında</string>
    <string name="text_pollUserPoll"> tarafından,</string>
    <string name="text_pollGenderFemale">Kadınlar</string>
    <string name="text_sortOptionAscending">Artan</string>
    <string name="text_btnMyPolls">Yayınladıklarım</string>
    <string name="text_btnCreatePoll">Anket Yayınla</string>
    <string name="text_pollStatsPoll"> kez oylandı.</string>
    <string name="text_accordingToPoll">Ankete Göre</string>
    <string name="text_sortOptionDescending">Azalan</string>
    <string name="text_btnPollCreate">Anketi Yayınla</string>
    <string name="hint_txtEmailSignIn">E-posta Adresi</string>
    <string name="hint_txtNameRegister">Kullanıcı Adı</string>
    <string name="text_btnUpdate">Tercihleri Güncelle</string>
    <string name="text_randomPoll">Bunu oyladınız mı?</string>
    <string name="text_btnAddPollOption">Seçenek Ekle</string>
    <string name="text_btnDeletePollOptionCreate">Sil</string>
    <string name="text_welcome"> olarak giriş yaptınız</string>
    <string name="text_btnBrowsePolls">Anketlere Göz At</string>
    <string name="text_pollOptions">Anket Seçenekleri: </string>
    <string name="text_detailedAnalysis">Detaylı Analiz</string>
    <string name="text_accordingToGender">Cinsiyete Göre</string>
    <string name="text_filterAndSort">Filtrele ve Sırala</string>
    <string name="text_sortOptions">Sıralama Seçenekleri</string>
    <string name="hint_txtBirthDateRegister">Doğum Tarihi</string>
    <string name="text_filterOptionCity">Yaşadığı şehir: </string>
    <string name="text_btnChangePassword">Şifreyi Değiştir</string>
    <string name="text_sortOptionSortOrder">Sıralama Yönü: </string>
    <string name="text_filterOptionGender">Cinsiyete Göre: </string>
    <string name="hint_passwordNewAgain">Yeni Şifre (Tekrar)</string>
    <string name="text_accordingToCity">Yaşanılan Şehre Göre</string>
    <string name="text_filterOptions">Filtreleme Seçenekleri</string>
    <string name="hint_txtPasswordAgainSignIn">Şifre (Tekrar)</string>
    <string name="text_btnShowStats">İstatistikleri Görüntüle</string>
    <string name="text_createPoll">Hemen bir anket oluşturun!</string>
    <string name="text_filterOptionAgeInterval">Yaş aralığı: </string>
    <string name="text_filterOptionCategory">Kategoriye Göre: </string>
    <string name="text_sortOptionPollTitle">Anket sorusuna göre</string>
    <string name="text_sortOptionAccordingTo">Sıralama Yöntemi: </string>
    <string name="text_sortOptionVoteCount">Oylanma sayısına göre</string>
    <string name="text_pollPublishDatePoll"> tarihinde yayınlandı.</string>
    <string name="text_userCannotVote">Bu anket sadece %s özeldir!</string>
    <string name="text_filterOptionMultiple">Seçenek Türüne Göre: </string>
    <string name="text_sortOptionCategoryName">Kategori ismine göre</string>
    <string name="text_btnSignInAnonymously">Giriş yapmadan devam et</string>
    <string name="text_btnDetailedAnalysis">Detaylı Analizi Görüntüle</string>
    <string name="text_pollMultiple">Birden fazla seçenek seçilebilsin</string>
    <string name="text_sortOptionPublishDate">Yayınlanma tarihine göre</string>
    <string name="text_sortOptionPollOptionCount">Seçenek sayısına göre</string>
    <string name="text_pollGenderSpecify">Kimler bu ankete oy verebilir?</string>
    <string name="text_noPollsFound">Aramanızla eşleşen\nanket bulunamadı</string>
    <string name="text_userAlreadyVoted">Bu anketi daha önce oylamışsınız!</string>
    <string name="text_accordingToUser">Anketi Yayınlayan Kullanıcıya Göre</string>
    <string name="text_filterOptionUser">Şu kişinin yayınladıklarını göster: </string>
    <string name="text_userCannotCreatePoll">Anket oluşturmak için giriş yapın</string>
    <string name="text_filterOptionMultipleNo">Yalnızca bir seçeneği oylanabilsin</string>
    <string name="text_filterOptionMultipleYes">Birden fazla seçeneği oylanabilsin</string>
    <string name="text_anonymousUserCannotVote">Anonim olarak giriş yaptığınız için\nbu anketi oylayamazsınız!</string>
    <string name="text_filterOptionUserOther">Şu özelliklere uyan kullanıcıların yayınladığı anketleri göster: </string>
    <string name="text_userCannotSeeDetailedAnalysis">Anonim olarak giriş yaptığınız için\ndetaylı analizi görüntüleyemezsiniz!</string>
</resources>