<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/kulerColor2"
    android:orientation="vertical"
    tools:context="com.ygznsl.noskurt.oyla.FilterSortActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llFilterOptionsFilterSort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_filterOptions"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="9pt"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/text_filterOptionCategory"
                    android:textColor="@android:color/black"
                    android:textSize="8pt" />

                <Spinner
                    android:id="@+id/spinnerPollCategoryFilterSort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/btn_colored2">

                </Spinner>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/border_2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/text_filterOptionGender"
                    android:textColor="@android:color/black"
                    android:textSize="8pt" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioGenderFemaleFilterSort"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:text="@string/text_pollGenderFemale" />

                    <RadioButton
                        android:id="@+id/radioGenderMaleFilterSort"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:text="@string/text_pollGenderMale" />

                    <RadioButton
                        android:id="@+id/radioGenderBothFilterSort"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:checked="true"
                        android:text="@string/text_pollGenderBoth" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/border_2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/text_filterOptionMultiple"
                    android:textColor="@android:color/black"
                    android:textSize="8pt" />

                <CheckBox
                    android:id="@+id/chkMultipleYesFilterSort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:checked="true"
                    android:text="@string/text_filterOptionMultipleYes" />

                <CheckBox
                    android:id="@+id/chkMultipleNoFilterSort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:checked="true"
                    android:text="@string/text_filterOptionMultipleNo" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSortOptionsFilterSort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_sortOptions"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="9pt"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/border_2"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_sortOptionAccordingTo"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="8pt" />

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <RadioButton
                            android:id="@+id/radioSortByPollTitleFilterSort"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/text_sortOptionPollTitle" />

                        <RadioButton
                            android:id="@+id/radioSortByCategoryNameFilterSort"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_sortOptionCategoryName" />

                        <RadioButton
                            android:id="@+id/radioSortByPublishDateFilterSort"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_sortOptionPublishDate" />

                        <RadioButton
                            android:id="@+id/radioSortByOptionCountFilterSort"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_sortOptionPollOptionCount" />

                        <RadioButton
                            android:id="@+id/radioSortByVoteCountFilterSort"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_sortOptionVoteCount" />

                    </RadioGroup>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/text_sortOptionSortOrder"
                        android:textColor="@android:color/black"
                        android:textSize="8pt" />

                    <RadioGroup
                        android:id="@+id/radioGroupSortOrderFilterSort"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioAscendingFilterSort"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_marginStart="10dp"
                            android:layout_weight="0.5"
                            android:checked="true"
                            android:text="@string/text_sortOptionAscending" />

                        <RadioButton
                            android:id="@+id/radioDescendingFilterSort"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_marginStart="10dp"
                            android:layout_weight="0.5"
                            android:text="@string/text_sortOptionDescending" />

                    </RadioGroup>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llButtonsFilterSort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancelFilterSort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0.5"
                android:background="@drawable/btn_colored1"
                android:text="@string/text_btnCancel"
                android:textColor="@color/kulerColor2" />

            <Button
                android:id="@+id/btnApplyFilterSort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0.5"
                android:background="@drawable/btn_colored2"
                android:text="@string/text_btnApply"
                android:textColor="@color/kulerColor2" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
