<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ygznsl.noskurt.oyla.PollAnalyticsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAlignment="center"
                android:textSize="9pt"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/text_voteCount"/>

            <LinearLayout
                android:id="@+id/relOptionsPollAnalytics"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAlignment="center"
                android:textSize="9pt"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/text_detailedAnalysis"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/btnLeftPollAnalytics"
                    android:src="@drawable/left_disabled"
                    android:contentDescription="@string/content_descriptionLeft"
                    android:layout_alignParentStart="true"
                    android:layout_margin="10dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/btnLeftPollAnalytics">

                    <RelativeLayout
                        android:id="@+id/relDetailedAnalysisCategoryPollAnalytics"
                        android:layout_toStartOf="@+id/btnRightPollAnalytics"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true">

                        <TextView
                            android:id="@+id/txtDetail1PollAnalytics"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textSize="9pt"
                            android:textColor="@android:color/black"
                            android:text="@string/text_accordingToGender"
                            android:visibility="visible" />

                        <TextView
                            android:id="@+id/txtDetail2PollAnalytics"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textSize="9pt"
                            android:textColor="@android:color/black"
                            android:text="@string/text_accordingToAge"
                            android:visibility="gone" />

                        <TextView
                            android:id="@+id/txtDetail3PollAnalytics"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textSize="9pt"
                            android:textColor="@android:color/black"
                            android:text="@string/text_accordingToCity"
                            android:visibility="gone" />

                    </RelativeLayout>

                    <ImageView
                        android:id="@+id/btnRightPollAnalytics"
                        android:src="@drawable/right"
                        android:contentDescription="@string/content_descriptionRight"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="10dp"
                        android:layout_width="40dp"
                        android:layout_height="40dp" />

                </RelativeLayout>

            </RelativeLayout>

            <TextView
                android:id="@+id/txtUserCannotSeeDetailedAnalysis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAlignment="center"
                android:textSize="7pt"
                android:textColor="@android:color/holo_red_dark"
                android:text="@string/text_userCannotSeeDetailedAnalysis"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnDetailedAnalysisPollAnalytics"
                android:text="@string/text_btnDetailedAnalysis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
